--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,29 +1,9 @@
-buildscript {
-    dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
-    }
-
-    repositories {
-        mavenCentral()
-        maven { url 'https://maven.fabric.io/public' }
-    }
-}
-
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
-apply plugin: 'com.neenbedankt.android-apt'
-
-repositories {
-    flatDir {
-        dirs 'libs'
-    }
-    maven { url 'https://maven.fabric.io/public' }
-}
-
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
     //use legacy for for android 6.0
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
@@ -44,19 +24,23 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.jakewharton:butterknife:8.4.0'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
     // Design support already included v4 and appcompat-v7, So here on the introduction of 'design'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.android.support:design:25.3.0'
+    compile 'com.android.support:multidex:1.0.1'
+
+    compile 'com.google.android.gms:play-services-gcm:10.2.0'
+    compile 'com.google.android.gms:play-services-places:10.2.0'
+    compile 'com.google.android.gms:play-services-maps:10.2.0'
+
+    // ButterKnife Library
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.google.android.gms:play-services-gcm:9.4.0'
-    compile 'com.google.android.gms:play-services-places:9.4.0'
-    compile 'com.google.android.gms:play-services-maps:9.4.0'
     compile 'com.parse:parse-android:1.13.1'
     compile 'com.hyphenate:hyphenate-sdk:3.2.3'
+
+    // twitter crashlytics
     compile('com.crashlytics.sdk.android:crashlytics:2.6.7@aar') {
         transitive = true;
     }
