--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,15 +3,15 @@ apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '25.0.3'
     //use legacy for for android 6.0
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.hyphenate.chatuidemo"
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 2005
-        versionName '3.2.9'
+        versionName '3.2.10'
         multiDexEnabled true
     }
     buildTypes {
@@ -25,22 +25,21 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     // Design support already included v4 and appcompat-v7, So here on the introduction of 'design'
-    compile 'com.android.support:design:25.3.0'
+    compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:multidex:1.0.1'
 
-    compile 'com.google.android.gms:play-services-gcm:10.2.0'
-    compile 'com.google.android.gms:play-services-places:10.2.0'
-    compile 'com.google.android.gms:play-services-maps:10.2.0'
+    compile 'com.google.android.gms:play-services-gcm:10.2.1'
+    compile 'com.google.android.gms:play-services-places:10.2.1'
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
 
-    // ButterKnife Library
-    compile 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    // ButterKnife Library, Do not need apt plugin
+    compile 'com.jakewharton:butterknife:8.6.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.parse:parse-android:1.13.1'
-    compile 'com.hyphenate:hyphenate-sdk:3.2.3'
 
-    // twitter crashlytics
+    compile 'com.hyphenate:hyphenate-sdk:3.3.1'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.7@aar') {
         transitive = true;
     }
