--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -181,7 +181,7 @@
         <!-- set your API key -->
         <meta-data
             android:name="EASEMOB_APPKEY"
-            android:value="easemob-demo#chatdemoui"/>
+            android:value="hyphenatedemo#hyphenatedemo"/>
         <!-- SDK service -->
         <service
             android:name="com.hyphenate.chat.EMChatService"
@@ -207,7 +207,7 @@
 
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="33bb2bc04d2ed7f91da02025c362279e3406ed81"/>
+            android:value="33bb2bc04d2ed7f91da02025c362279e3406ed81" />
 
         <!-- set your google map api key -->
         <meta-data
