--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets{
+        main{
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
@@ -62,7 +67,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-places:10.2.1'
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'com.parse:parse-android:1.13.1'
-    compile 'com.hyphenate:hyphenate-sdk:3.2.3'
+//    compile 'com.hyphenate:hyphenate-sdk:3.2.3'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.7@aar') {
         transitive = true;
     }
